--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "axios": "^0.18.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "date-fns": "^1.30.1",
     "debug": "~4.1.1",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
+    "immutable": "^4.0.0-rc.12",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
@@ -34,9 +36,11 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "serve-favicon": "~2.5.0"
+    "serve-favicon": "~2.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
