--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:client:prod": "webpack --config=webpack/webpack.client.prod.js",
     "build:server:dev": "webpack --config=webpack/webpack.server.js",
     "build:server:prod": "webpack --config=webpack/webpack.server.prod.js",
-    "analytics": "webpack --config=webpack/webpack.analytics.js"
+    "analytics": "webpack --config=webpack/webpack.analytics.js",
+    "test": "jest"
   },
   "repository": "git@github.com:slashtu/flights.git",
   "author": "Slash Tu <y12341234@gmail.com>",
@@ -49,9 +50,12 @@
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
     "incstr": "^1.2.3",
+    "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^1.2.3",
