--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "prod": "yarn run build:prod && yarn start",
     "build:dev": "yarn run build:client:dev && yarn run build:server:dev",
     "build:prod": "yarn run build:client:prod && yarn run build:server:prod",
-    "start": "node dist/server/server.js",
-    "build:client:dev": "webpack --config=webpack/webpack.client.js",
+    "start": "node build/server.js",
+    "build:client:dev": "webpack --config=webpack/webpack.client.dev.js",
     "build:client:prod": "webpack --config=webpack/webpack.client.prod.js",
-    "build:server:dev": "webpack --config=webpack/webpack.server.js",
-    "build:server:prod": "webpack --config=webpack/webpack.server.prod.js",
+    "build:server:dev": "webpack --mode development --config=webpack/webpack.server.js",
+    "build:server:prod": "webpack --mode production --config=webpack/webpack.server.js",
     "analytics": "webpack --config=webpack/webpack.analytics.js",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "updateSnapshot": "jest --updateSnapshot"
   },
   "repository": "git@github.com:slashtu/flights.git",
   "author": "Slash Tu <y12341234@gmail.com>",
@@ -27,8 +29,6 @@
     "debug": "~4.1.1",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
-    "immutable": "^4.0.0-rc.12",
-    "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "react": "^16.8.5",
@@ -54,17 +54,23 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
+    "identity-obj-proxy": "^3.0.0",
     "incstr": "^1.2.3",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "redux-mock-store": "^1.5.3",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "workbox-webpack-plugin": "^4.2.0"
   },
   "engines": {
     "node": "^10.13.0"
