--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:server:dev": "webpack --mode development --config=webpack/webpack.server.js",
     "build:server:prod": "webpack --mode production --config=webpack/webpack.server.js",
     "analytics": "webpack --config=webpack/webpack.analytics.js",
-    "test": "jest",
+    "test": "jest --watchAll",
     "coverage": "jest --coverage",
     "updateSnapshot": "jest --updateSnapshot"
   },
